[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ball.gd" type="Script" id=1]
[ext_resource path="res://Spark.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/White.png" type="Texture" id=3]
[ext_resource path="res://Assets/light.png" type="Texture" id=4]
[ext_resource path="res://Audio/Laser.wav" type="AudioStream" id=5]
[ext_resource path="res://Camera2D.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.00581395, 1 )
colors = PoolColorArray( 0, 0, 0, 0.196078, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[sub_resource type="CircleShape2D" id=8]
radius = 31.5126

[node name="Ball" type="RigidBody2D" groups=[
"balls",
]]
input_pickable = true
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 3.0
contacts_reported = 10
contact_monitor = true
linear_velocity = Vector2( 1, 0 )
linear_damp = 0.0
angular_velocity = 1.0
angular_damp = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Spark" parent="." instance=ExtResource( 2 )]

[node name="Trail" type="Particles2D" parent="."]
amount = 10
speed_scale = 2.0
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
color = Color( 0.427451, 0.898039, 0.745098, 1 )
range_layer_min = -1
shadow_enabled = true
shadow_gradient_length = 30.0
shadow_filter = 5
shadow_filter_smooth = 30.0

[node name="Sprite" type="Sprite" parent="Light2D"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PitchTimer" type="Timer" parent="AudioStreamPlayer"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_right = 1024
limit_bottom = 600
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 1.0
drag_margin_top = 0.5
drag_margin_right = 1.0
drag_margin_bottom = 1.0
editor_draw_limits = true
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="AudioStreamPlayer/PitchTimer" to="." method="_on_PitchTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
